# macland

./: .gitignore  Cargo.toml  Package.swift  README.md  macland  macland-cli  plan.md
Sources/MaclandHostSupport/: HostArguments.swift  HostConfiguration.swift  HostSessionController.swift  PermissionProbe.swift
Sources/macland-host/: main.swift
Sources/macland-host-selftest/: main.swift
Sources/macland-permissions/: main.swift
crates/macland-cli/: Cargo.toml
crates/macland-cli/src/: main.rs
crates/macland-cli/tests/: e2e.rs
crates/macland-core/: Cargo.toml  build.rs
crates/macland-macos-bridge/: Cargo.toml
crates/macland-macos-bridge/src/: main.rs  main.rs.backup
crates/macland-meta/: Cargo.toml
crates/macland-reference-client/: Cargo.toml
crates/macland-reference-client/src/: main.rs
docs/: adapter-format.md
fixtures/cargo-compositor-template/: Cargo.toml
fixtures/cmake-compositor-template/: CMakeLists.txt
fixtures/example-compositor-template/: build.sh  macland.toml  test.sh
fixtures/meson-compositor-template/: meson.build
overrides/Hyprland/: macland.toml
overrides/labwc/: macland.toml
overrides/niri/: config.kdl  macland.toml
overrides/sway/: macland.toml  sway.conf
overrides/weston/: macland.toml
repos/Hyprland/: macland.toml
repos/labwc/: macland.toml
repos/niri/: macland.toml
repos/sway/: macland.toml
scripts/: macland-cli.zsh  macland.py  macland_cli.py  sway_status.sh  sway_term_wrapper.sh  wayland_capture.py  wayland_demo.py  wayland_interactive.py  wayland_terminal.py
tests/: browser_input_e2e.py
(+27 files in other folders)
