[workspace]
members = [
    "crates/macland-core",
    "crates/macland-cli",
    "crates/macland-reference-client",
    "crates/macland-meta",
    "crates/macland-macos-bridge",
]
default-members = ["crates/macland-meta"]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
version = "0.1.0"
