[package]
name = "macland-reference-client"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
wayland-client = "0.31.13"
wayland-protocols = { version = "0.32.11", features = ["client", "staging", "unstable"] }
wayland-protocols-misc = { version = "0.3.11", features = ["client"] }
wayland-protocols-wlr = { version = "0.3.11", features = ["client"] }
